[package]
authors = ["Dima Bushuev"]
edition = '2018'
license = 'Apache-2.0'
name = 'evercity-runtime'
repository = 'https://github.com/EvercityEcosystem/evercity-chain'
version = '0.1.0'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.124' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
pallet-evercity-bonds = { default-features = false, version = '0.1.1', path = '../pallets/evercity-bonds' }
pallet-evercity-transfer = { default-features = false, version = '0.1.1', path = '../pallets/evercity-bonds/transfer' }
pallet-evercity-carbon-credits = { default-features = false, version = '0.1.13', path = '../pallets/evercity-carbon-credits' }
pallet-evercity-accounts = { default-features = false, version = '0.1.7', path = '../pallets/evercity-accounts' }
pallet-assets = { default-features = false, version = '3.0.0' }

pallet-evercity-filesign = { default-features = false, version = '0.1.4', path = '../pallets/evercity-filesign' }
pallet-evercity-assets = { default-features = false, version = '0.1.0', path = '../pallets/evercity-assets' }
pallet-evercity-exchange = { default-features = false, version = '0.1.0', path = '../pallets/evercity-exchange' }
pallet-evercity-carbon-bridge = { default-features = false, version = '0.1.0', path = '../pallets/evercity-carbon-bridge' }

getrandom = {version = "0.2.3", features = ['js']}

[features]
default = ['std']

std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-session/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-runtime/std',
    'pallet-evercity-bonds/std',
    'pallet-evercity-transfer/std',
    'pallet-evercity-carbon-credits/std',
    'pallet-evercity-accounts/std',
    'pallet-evercity-filesign/std',
    'pallet-evercity-assets/std',
    'pallet-assets/std',
    'pallet-evercity-exchange/std',
    'pallet-evercity-carbon-bridge/std',
    # 'pallet-everusd-carbon-credits-swap/std',
]