[package]
authors = ["Sergey Prilutskiy <boogerwooger@mail.ru>", "Dmitry Dulesov <dmitry.dulesov@gmail.com>"]
description = 'Pallet for Evercity green bonds emission project'
edition = '2021'
homepage = 'https://evercity.io'
license = 'Apache-2.0'
name = 'pallet-evercity-bonds'
readme = '../README.md'
repository = 'https://github.com/EvercityEcosystem/evercity-substrate'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.124'

[dependencies.impl-trait-for-tuples]
version = "0.1.3"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

# local
pallet-evercity-accounts = { default-features = false, version = '0.2.0', path = '../evercity-accounts'}

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
rand = { version = '0.8.4' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-evercity-accounts/std'
]
